--- a/src/scss/blocks/_app.scss
+++ b/src/scss/blocks/_app.scss
@@ -48,6 +48,10 @@
 
     &__description {
       width: 100%;
+
+      & > p {
+        letter-spacing: -0.1px;
+      }
     }
 
     &__button {
